# i3-appvindicator

./: README.md  i3-appvindicator  setup.cfg
i3appvindicator/: i3appvindicator.py
