[metadata]
name = i3-appvindicator
version = 1.0.0
author = vindex10
author_email = vindex10@gmail.com
description = Hide apps to tray using i3 scratchpad
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vindex10/i3-appvindicator

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyGObject==3.40.*
scripts = 
    i3-appvindicator
